change invoice fields
