# src/main/java/ir/co/sadad/eb/service/dto/InvoiceDetailDTO.java
@@ -2,9 +2,14 @@ package ir.co.sadad.eb.service.dto;
 
 //todo don't use lombok in dtos
 
+import org.eclipse.microprofile.openapi.annotations.enums.SchemaType;
+import org.eclipse.microprofile.openapi.annotations.media.Schema;
+import org.eclipse.microprofile.openapi.annotations.parameters.Parameter;
 
+@Schema(name = "InvoiceDetailDto",
+type = SchemaType.OBJECT)
 public class InvoiceDetailDTO {
-
+    @Parameter(name ="id" , description = "شناسه")
     private Integer id;
     //     شماره ورود
 //    private String loadCode;
@@ -32,25 +37,25 @@ public class InvoiceDetailDTO {
     //  وزن ورود به مقصد
 //    private Double loadWeight;
     //  کسری مجاز
-    private Double allowedDeficit;
+//    private Double allowedDeficit;
     // کسری غیرمجاز
-    private Double illegalDeficit;
+//    private Double illegalDeficit;
     //  نرخ کرایه حمل
-    private Double carriageRate;
+//    private Double carriageRate;
     //  کرایه حمل
-    private Double carriageFare;
+//    private Double carriageFare;
     //  حق مدیریت
-    private Double managerSalary ;
+//    private Double managerSalary ;
     // حق بیمه
-    private Double premium;
+//    private Double premium;
     // مقدار غرامت دستی :|
-    private Double amountOfHandyIndemnity;
+//    private Double amountOfHandyIndemnity;
     // مبلغ غرامت دستی :|
-    private Double feeOfHandyIndemnity;
+//    private Double feeOfHandyIndemnity;
     // مقدار غرامت نرسیده :|
-    private Double amountOfNotArrivedIndemnity;
+//    private Double amountOfNotArrivedIndemnity;
     // مبلغ غرامت نرسیده :|
-    private Double feeOfNotArrivedIndemnity;
+//    private Double feeOfNotArrivedIndemnity;
     // مسافت
 //    private Double distance ;
 
@@ -158,87 +163,94 @@ public class InvoiceDetailDTO {
 //        this.loadWeight = loadWeight;
 //    }
 
-    public Double getAllowedDeficit() {
-        return allowedDeficit;
-    }
-
-    public void setAllowedDeficit(Double allowedDeficit) {
-        this.allowedDeficit = allowedDeficit;
-    }
-
-    public Double getIllegalDeficit() {
-        return illegalDeficit;
-    }
-
-    public void setIllegalDeficit(Double illegalDeficit) {
-        this.illegalDeficit = illegalDeficit;
-    }
-
-    public Double getCarriageRate() {
-        return carriageRate;
-    }
-
-    public void setCarriageRate(Double carriageRate) {
-        this.carriageRate = carriageRate;
-    }
-
-    public Double getCarriageFare() {
-        return carriageFare;
-    }
-
-    public void setCarriageFare(Double carriageFare) {
-        this.carriageFare = carriageFare;
-    }
-
-    public Double getManagerSalary() {
-        return managerSalary;
-    }
-
-    public void setManagerSalary(Double managerSalary) {
-        this.managerSalary = managerSalary;
-    }
-
-    public Double getPremium() {
-        return premium;
-    }
-
-    public void setPremium(Double premium) {
-        this.premium = premium;
-    }
-
-    public Double getAmountOfHandyIndemnity() {
-        return amountOfHandyIndemnity;
-    }
-
-    public void setAmountOfHandyIndemnity(Double amountOfHandyIndemnity) {
-        this.amountOfHandyIndemnity = amountOfHandyIndemnity;
-    }
-
-    public Double getFeeOfHandyIndemnity() {
-        return feeOfHandyIndemnity;
-    }
-
-    public void setFeeOfHandyIndemnity(Double feeOfHandyIndemnity) {
-        this.feeOfHandyIndemnity = feeOfHandyIndemnity;
-    }
-
-    public Double getAmountOfNotArrivedIndemnity() {
-        return amountOfNotArrivedIndemnity;
-    }
-
-    public void setAmountOfNotArrivedIndemnity(Double amountOfNotArrivedIndemnity) {
-        this.amountOfNotArrivedIndemnity = amountOfNotArrivedIndemnity;
-    }
-
-    public Double getFeeOfNotArrivedIndemnity() {
-        return feeOfNotArrivedIndemnity;
-    }
-
-    public void setFeeOfNotArrivedIndemnity(Double feeOfNotArrivedIndemnity) {
-        this.feeOfNotArrivedIndemnity = feeOfNotArrivedIndemnity;
-    }
-
-//    public Double getDistance() {
+//    public Double getAllowedDeficit() {
+//        return allowedDeficit;
+//    }
+//
+//    public void setAllowedDeficit(Double allowedDeficit) {
+//        this.allowedDeficit = allowedDeficit;
+//    }
+//
+//    public Double getIllegalDeficit() {
+//        return illegalDeficit;
+//    }
+//
+//    public void setIllegalDeficit(Double illegalDeficit) {
+//        this.illegalDeficit = illegalDeficit;
+//    }
+//
+//    public Double getCarriageRate() {
+//        return carriageRate;
+//    }
+//
+//    public void setCarriageRate(Double carriageRate) {
+//        this.carriageRate = carriageRate;
+//    }
+//
+//    public Double getCarriageFare() {
+//        return carriageFare;
+//    }
+//
+//    public void setCarriageFare(Double carriageFare) {
+//        this.carriageFare = carriageFare;
+//    }
+//
+//    public Double getManagerSalary() {
+//        return managerSalary;
+//    }
+//
+//    public void setManagerSalary(Double managerSalary) {
+//        this.managerSalary = managerSalary;
+//    }
+//
+//    public Double getPremium() {
+//        return premium;
+//    }
+//
+//    public void setPremium(Double premium) {
+//        this.premium = premium;
+//    }
+//
+//    public Double getAmountOfHandyIndemnity() {
+//        return amountOfHandyIndemnity;
+//    }
+//
+//    public void setAmountOfHandyIndemnity(Double amountOfHandyIndemnity) {
+//        this.amountOfHandyIndemnity = amountOfHandyIndemnity;
+//    }
+//
+//    public Double getFeeOfHandyIndemnity() {
+//        return feeOfHandyIndemnity;
+//    }
+//
+//    public void setFeeOfHandyIndemnity(Double feeOfHandyIndemnity) {
+//        this.feeOfHandyIndemnity = feeOfHandyIndemnity;
+//    }
+//
+//    public Double getAmountOfNotArrivedIndemnity() {
+//        return amountOfNotArrivedIndemnity;
+//    }
+//
+//    public void setAmountOfNotArrivedIndemnity(Double amountOfNotArrivedIndemnity) {
+//        this.amountOfNotArrivedIndemnity = amountOfNotArrivedIndemnity;
+//    }
+//
+//    public Double getFeeOfNotArrivedIndemnity() {
+//        return feeOfNotArrivedIndemnity;
+//    }
+//
+//    public void setFeeOfNotArrivedIndemnity(Double feeOfNotArrivedIndemnity) {
+//        this.feeOfNotArrivedIndemnity = feeOfNotArrivedIndemnity;
+//    }
+//
+//    public String getLadingOfBillSeries() {
+//        return ladingOfBillSeries;
+//    }
+//
+//    public void setLadingOfBillSeries(String ladingOfBillSeries) {
+//        this.ladingOfBillSeries = ladingOfBillSeries;
+//    }
+    //    public Double getDistance() {
 //        return distance;
 //    }
 
